# ticket-with-k8s

./: .env.example  .gitignore  .gitlab-ci.yml  .trivyignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  API_CONTRACTS.md  CICD_PLAN.md  CONTEXT.md  CRON.md  DB_SCHEMA.md  INFRA_PLAN.md  K8S_STACK.md  PLAN.md  PROTOTYPE_RUNBOOK.md  README.md  UI_COPY.md  docker-compose.yml  k6-test.js  pub-cert.pem
apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
cron/: Dockerfile  README.md  daily_delete_data.py  daily_update_data.py  pyproject.toml
docs/adr/: 0001-booking-service-owns-async-booking.md  0002-redis-backed-saved-performances.md  0003-one-postgres-instance-with-service-databases.md  0004-monorepo-for-one-day-demo.md  0005-strimzi-with-strict-resource-limits.md  0006-redis-streams-for-booking-queue.md  0007-gateway-api-with-istio.md
docs/ops/: CICD_PLAN.md  DEPLOY_STRATEGY.md  ETCD_ENCRYPTION.md  K8S_STACK.md  LOAD_SHEDDING.md  PROTOTYPE_RUNBOOK.md  QUOTA_LIMITS_REPORT.md  (+2 more)
load-test/: k6-keda-test.js  k6-test.js  verify-queue-local.sh
services/: .gitlab-ci.yml
services/booking-service/: Dockerfile  pyproject.toml
services/booking-service/app/: admission_worker.py  common.py  dispatcher.py  main.py  telemetry.py  worker.py
services/booking-service/tests/: conftest.py  test_admission_worker.py  test_common.py  test_dispatcher.py  test_main.py  test_worker.py
services/event-service/: Dockerfile  pyproject.toml
services/event-service/app/: main.py  telemetry.py
services/event-service/tests/: test_main.py
(+46 files in other folders)
