[project]
name = "booking-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "pyjwt>=2.9.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-instrumentation-redis>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0"
]
